# DUMBO

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  README_DEV.md  README_SIMULATOR.md  run.sh  run_update_stresstest.sh  scheduling_DUMBO.patch  setup_conda.sh
conda_envs/: scheduling_env.yml  training_env.yml
models/training/: pheavy_training_testing.py  training_testing.py  voting_rf_classifier.py
models/utils/: cdf.py  confusion_matrix.py  helpers.py  meta_cost_learning.py  model_explorer.ipynb  model_sizing.py  plots.py  preprocessing.py  proba_thr.py  sklearn2onnx.py
plots/: appendix_protocols.ipynb  intro_cdfs.ipynb
plots/models/: appendix_models_comparisons.ipynb  model_update_stresstest.ipynb  models_comparisons.ipynb  trustee.ipynb
plots/system/: flow_size_estimation.ipynb  fse_synth.ipynb  hierarchical_flow_manager.ipynb  iat_quantiles.ipynb  iat_synth.ipynb  scheduling.ipynb  scheduling_synth.ipynb
scripts/models/: confusion_matrix.sh  pheavy.sh  sklearn2onnx.sh  training.sh  update_CAIDA-MAWI_TCP+UDP+ICMP.sh  update_CAIDA-MAWI_TCP+UDP.sh
scripts/preprocessing/: extract_cdf.sh  features_extraction.sh  init_trace_dir.sh  pcap_parsing.sh  preprocess_es.sh  preprocess_synth.sh
scripts/use_cases/: elastic.out  script_es.sh  script_fse.sh  script_fse_synth.sh  (+4 more)
simulations/: error_es.py  error_fse.py  error_iat.py  preprocess_trace_for_synth_model.py  run_simulation_fse.py  run_simulation_iat.py  utils.py
src/: lib.rs  pcap_parser.rs  pcap_parser_es.rs  simulation_baseline.rs  simulation_fse.rs  simulation_fse_fm.rs  simulation_iat_fm.rs
(+27 files in other folders)
